--- a/ch02/main.css
+++ b/ch02/main.css
@@ -9,7 +9,7 @@ body {
     max-width: 600px;
 }
 h1 {    
-    font-size: 200%;
+    font-size: 200%
     color: navy;
     padding-bottom: .3em;
 }
