--- a/ch05/town_hall/styles/main.css
+++ b/ch05/town_hall/styles/main.css
@@ -1,57 +1,105 @@
-/* custom property */
-:root {
-	--accent-color: #800000;  /* could also be coded #800 */
-}
-
-/* default styles */
-body {
+    * {
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+	}
+	
+	/* custom property */
+	:root {
+	--accent-color: #800000;
+	}
+	
+	/* default styles */
+	body {
 	font-family: Arial, Helvetica, sans-serif;
-    font-size: 100%;
-}
-a:hover, a:focus{
+	font-size: 100%;
+	width: 80%;
+	margin: auto;
+	border: 2px solid var(--accent-color);
+	}
+	
+	h1, h2, h3, p, ul {
+	padding-top: 0.5em;
+	padding-bottom: 0.5em;
+	}
+	
+	ul {
+	margin-left: 2em;
+	}
+	
+	a:hover, a:focus {
 	font-style: italic;
 	color: var(--accent-color);
-}
-h1 {
+	}
+	
+    h1 {
 	font-size: 150%;
-}
-h2 {
+	}
+	
+	h2 {
 	font-size: 130%;
 	color: var(--accent-color);
-}
-h3 {
+	}
+	
+	h3 {
 	font-size: 105%;
-}
-
-/* the styles for the header */
-header {
-	& h2 {
-		font-size: 175%;
-		text-indent: 30px;
 	}
-	& h3 {
-		font-size: 130%;
-		font-style: italic;
-		text-indent: 30px;
+	
+	/* Header styles */
+	header {
+	border-bottom: 2px solid var(--accent-color);
+	background: linear-gradient(30deg, #f6bb73 0%, white 30%, white 65%, #f6bb73 100%);
 	}
-	& img {
-		float: left;
+	
+	header h2 {
+	font-size: 175%;
+	padding-bottom: 0;
 	}
-}
-
-/* the styles for the main content */
-main {
+	
+	header h3 {
+	font-size: 130%;
+	font-style: italic;
+	padding-bottom: 1em;
+	}
+	
+	header img {
+	float: left;
+	margin: 0.75em 1em;
+	}
+	
+	/* Main content styles */
+	main {
 	clear: left;
-}
-
-/* the styles for the footer */
-footer {
-	& p {
-		text-align: center;
+	padding: 0 1em 1em;
 	}
-}
-
-/* CSS class */
-.large {
+	
+	main h1 {
+	border-top: 2px solid var(--accent-color);
+	border-bottom: 2px solid var(--accent-color);
+	}
+	
+	main img {
+	border: 4px double var(--accent-color);
+	border-radius: 10px;
+	}
+	
+	/* Footer styles */
+	footer {
+	background-color: var(--accent-color);
+	}
+	
+	footer p {
+	text-align: center;
+	color: white;
+	padding: 1em 0;
+	}
+	
+	/* Additional styles */
+	blockquote {
+	font-style: italic;
+	padding-left: 2em;
+	}
+	
+	.large {
 	font-size: 125%;
-}
+	}
