--- a/ch07/town_hall/styles/main.css
+++ b/ch07/town_hall/styles/main.css
@@ -1,7 +1,10 @@
 /* custom property */
 :root {
-	--accent-color: #800000;  /* could also be coded #800 */
-	--gradient-color: #f6bb73;
+    --accent-color: #800000;  
+    --gradient-color: #f6bb73;
+    --menu-light: #f5f5f5;     
+    --menu-mid: #faebd7;        
+    --menu-dark: #333333;       
 }
 
 /* reset */
@@ -125,4 +128,38 @@ footer {
 }
 .large {
 	font-size: 125%;
+}
+
+/* Navigation Bar Styles */
+.navbar {
+    background-color: var(--accent-color);
+}
+.navbar ul {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+}
+.navbar a {
+    display: block;
+    padding: 1em;
+    text-decoration: none;
+    color: var(--menu-light);
+    /* Finishing touches: add margins to create space around links */
+    margin: 0 1px 2px 1px;
+}
+.navbar a:hover,
+.navbar a:focus,
+.navbar a.current {
+    background-color: var(--menu-mid);
+    color: var(--menu-dark);
+}
+
+/* Menu Flexbox Layout */
+.menu {
+    display: flex;
+    flex-wrap: wrap;
+}
+.menu li {
+    flex-basis: 20%;
+    text-align: center;
 }
