--- a/ch08/town_hall/styles/main.css
+++ b/ch08/town_hall/styles/main.css
@@ -1,8 +1,7 @@
 /* custom property */
 :root {
-	--accent-color: #800000;  /* could also be coded #800 */
+	--accent-color: #800000;
 	--gradient-color: #f6bb73;
-
 	--light_menu: white;
 	--mid_menu: antiquewhite;
 	--dark_menu: black;
@@ -75,7 +74,7 @@ main {
 		font-style: italic;
 		padding-left: 1em;
 	}
-	& h3 + img { /* speaker images */
+	& h3 + img {
 		width: clamp(40px, 50%, 75px);
 		border: 4px double var(--accent-color);
 		border-radius: 10px;
@@ -143,6 +142,7 @@ footer {
 .navbar {
 	clear: left;
 	background-color: var(--accent-color);
+	position: relative;
 	& a {
 		display: block;
 		padding: 1em;
@@ -168,19 +168,117 @@ footer {
 	& small { margin-left: .25em; }
 }
 
-.dropdown {
-	position: absolute;
-	left: 0;
-	right: 0;
-	background-color: var(--accent-color);
-	color: var(--light_menu);
+/* === Mobile-First Adjustments === */
+main {
+	display: flex;
+	flex-direction: column-reverse;
+	padding: 0 1em 1em;
+}
+section {
+	padding-left: .5em;
+	border-bottom: 2px solid var(--accent-color);
+}
+aside {
+	padding-right: .5em;
+}
+
+/* Hide logo on mobile */
+header {
+	text-align: center;
+}
+header img {
 	display: none;
-	& > li a { margin: 0 2px 2px; }
 }
 
-.submenu:hover > .dropdown {
+/* Mobile nav: hamburger menu setup */
+.menu-btn {
 	display: block;
+	background-color: var(--accent-color);
+	color: white;
+	font-size: 2em;
+	padding: 0.5em 1em;
+	cursor: pointer;
+}
+#menu-toggle {
+	display: none;
+}
+.menu {
+	display: none;
+	flex-direction: column;
+	position: absolute;
+	top: 100%;
+	left: 0;
+	width: 100%;
+	background-color: var(--accent-color);
+	z-index: 1000;
+}
+#menu-toggle:checked ~ .menu {
+	display: flex;
 }
 
-.menu > li:first-child a { margin-left: 0; }
-.menu > li:last-child a { margin-right: 0; }
+/* Mobile dropdown fix */
+.dropdown {
+	display: none;
+	position: static;
+	flex-direction: column;
+	background-color: var(--accent-color);
+	padding-left: 1em;
+}
+.submenu:focus-within .dropdown,
+.submenu:active .dropdown {
+	display: flex;
+}
+.dropdown a {
+	padding: 0.75em 1em;
+}
+
+/* === Desktop Enhancement === */
+@media (min-width: 768px) {
+	main {
+		flex-direction: row;
+	}
+	section {
+		flex-basis: 75%;
+		border-bottom: none;
+	}
+	aside {
+		flex-basis: 25%;
+	}
+
+	header {
+		text-align: left;
+	}
+	header img {
+		display: block;
+		width: clamp(40px, 15%, 80px);
+		float: left;
+		margin: .75em 1em;
+	}
+
+	.menu {
+		display: flex;
+		position: relative;
+		flex-direction: row;
+		flex-wrap: wrap;
+		width: 100%;
+	}
+	.menu-btn {
+		display: none;
+	}
+
+	.dropdown {
+		display: none;
+		position: absolute;
+		background-color: var(--accent-color);
+		left: 0;
+		right: 0;
+		padding-left: 0;
+	}
+	.submenu:hover .dropdown {
+		display: block;
+	}
+
+	.submenu > a::after {
+		content: ' ▼';
+	}
+}
