--- a/ch10/town_hall/styles/main.css
+++ b/ch10/town_hall/styles/main.css
@@ -15,6 +15,13 @@
 	box-sizing: border-box;
 }
 
+@font-face {
+  font-family: 'Inkfree';
+  src: url('Inkfree.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
+
 /* default styles */
 body {
 	font-family: Arial, Helvetica, sans-serif;
@@ -64,6 +71,10 @@ header {
 	& img {
 		display: none;
 	}
+}
+
+header h2 {
+  font-family: 'Inkfree';
 }
 
 /* the styles for the main content */
